Added stuff
Mines , new Shops, new Commands, All new All different marvel